Fix: Prevent zoom on mobile input focus
Mobile window zooms at fonts lower than 16px, according to web search

--- a/random/css/styles.css
+++ b/random/css/styles.css
@@ -9,7 +9,7 @@
 
 body {
     font-family: 'B612 mono', monospace;
-    font-size: .85em;
+    font-size: 16px;
     background-color: rgb(170, 139, 118);
     padding: 10px;
 }
@@ -48,6 +48,7 @@ p {
 input {
     border-radius: 0;
     font-family: inherit;
+    font-size: inherit;
 }
 
 .submit,
@@ -231,6 +232,10 @@ input {
 }
 
 @media (min-width: 640px) {
+    body {
+        font-size: .85em;
+    }
+
     .top {
         display: grid;
         grid-template-areas: "app app secondary";
